add swaggers docs and old code fix
